Skills Section Updates

--- a/public/index.html
+++ b/public/index.html
@@ -78,26 +78,26 @@
       </div>
     </section>
 
-    <!-- Service-->
+    <!-- Skills-->
     <section id="services" class="bg-gradient services-section">
       <div class="container">
         <header class="text-center">
-          <h2 data-animate="fadeInDown" class="title">Services</h2>
+          <h2 data-animate="fadeInDown" class="title">Skills</h2>
         </header>
         <div class="row services text-center">
           <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-search"></i></div>
-            <h3 class="heading mb-3 text-400">Consulting</h3>
-            <p class="text-left description">On on produce colonel pointed. Just four sold need over how any. In to september suspicion determine he prevailed admitting. On adapted an as affixed limited on. Giving cousin warmly things no spring mr be abroad. Relation breeding be as repeated strictly followed margaret. One gravity son brought shyness waiting regular led ham.</p>
-          </div>
-          <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-html5"></i></div>
+            <div class="icon"><i class="fa fa-code"></i></div>
             <h3 class="heading mb-3 text-400">HTML coding</h3>
             <p class="text-left description">Manor we shall merit by chief wound no or would. Oh towards between subject passage sending mention or it. Sight happy do burst fruit to woody begin at. Assurance perpetual he in oh determine as.</p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-tachometer"></i></div>
-            <h3 class="heading mb-3 text-400">PHP webdelopment</h3>
+            <div class="icon"><i class="fa fa-code"></i></div>
+            <h3 class="heading mb-3 text-400">React</h3>
+            <p class="text-left description">On on produce colonel pointed. Just four sold need over how any. In to september suspicion determine he prevailed admitting. On adapted an as affixed limited on. Giving cousin warmly things no spring mr be abroad. Relation breeding be as repeated strictly followed margaret. One gravity son brought shyness waiting regular led ham.</p>
+          </div>
+          <div data-animate="fadeInUp" class="col-lg-4">
+            <div class="icon"><i class="fa fa-code"></i></div>
+            <h3 class="heading mb-3 text-400">C#</h3>
             <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
           </div>
         </div>
@@ -335,11 +335,16 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center text-lg-left">
-            <p class="social"><a href="#" class="external facebook wow fadeInUp"><i class="fa fa-facebook"></i></a><a href="#" data-wow-delay="0.2s" class="external instagram wow fadeInUp"><i class="fa fa-instagram"></i></a><a href="#" data-wow-delay="0.4s" class="external gplus wow fadeInUp"><i class="fa fa-google-plus"></i></a><a href="#" data-wow-delay="0.6s" class="email wow fadeInUp"><i class="fa fa-envelope"></i></a></p>
+            <p class="social">
+              <a href="#" class="external github wow fadeInUp"><i class="fa fa-github"></i></a>
+              <a href="#" data-wow-delay="0.2s" class="external linkedin wow fadeInUp"><i class="fa fa-linkedin"></i></a>
+              <a href="#" data-wow-delay="0.4s" class="external youtube wow fadeInUp"><i class="fa fa-youtube"></i></a>
+              <a href="#" data-wow-delay="0.6s" class="email wow fadeInUp"><i class="fa fa-envelope"></i></a>
+            </p>
           </div>
           <!-- /.6-->
           <div class="col-md-6 text-center text-lg-right mt-4 mt-lg-0">
-            <p>© 2018 Your name goes here. All rights reserved.</p>
+            <p>© 2019 Christoper Hayes. All rights reserved.</p>
           </div>
           <div class="col-12 mt-4">
             <p class="template-bootstrapious">Template by <a href='https://bootstrapious.com/p/bootstrap-carousel'>Bootstrapious</a> & <a href="https://fity.cz/ostrava">Fity</a></p>
