More Skills Section Updates

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <!-- Leaflet CSS - For the map-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.css">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon" href="img/code.png">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -41,7 +41,7 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a href="#intro" class="nav-link link-scroll">Intro</a></li>
               <li class="nav-item"><a href="#about" class="nav-link link-scroll">About</a></li>
-              <li class="nav-item"><a href="#services" class="nav-link link-scroll">Services</a></li>
+              <li class="nav-item"><a href="#services" class="nav-link link-scroll">Skills</a></li>
               <li class="nav-item"><a href="#references" class="nav-link link-scroll">My work</a></li>
               <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li>
               <!-- <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li> -->
@@ -87,18 +87,29 @@
         <div class="row services text-center">
           <div data-animate="fadeInUp" class="col-lg-4">
             <div class="icon"><i class="fa fa-code"></i></div>
-            <h3 class="heading mb-3 text-400">HTML coding</h3>
-            <p class="text-left description">Manor we shall merit by chief wound no or would. Oh towards between subject passage sending mention or it. Sight happy do burst fruit to woody begin at. Assurance perpetual he in oh determine as.</p>
+            <h3 class="heading mb-3 text-400">HTML5</h3>
           </div>
           <div data-animate="fadeInUp" class="col-lg-4">
             <div class="icon"><i class="fa fa-code"></i></div>
+            <h3 class="heading mb-3 text-400">CSS/Bootstrap</h3>
+          </div>
+          <div data-animate="fadeInUp" class="col-lg-4">
+            <div class="icon"><i class="fa fa-code"></i></div>
+            <h3 class="heading mb-3 text-400">JavaScript</h3>
+          </div>
+        </div>
+        <div class="row services text-center">
+          <div data-animate="fadeInUp" class="col-lg-4">
+            <div class="icon"><i class="fa fa-code"></i></div>
             <h3 class="heading mb-3 text-400">React</h3>
-            <p class="text-left description">On on produce colonel pointed. Just four sold need over how any. In to september suspicion determine he prevailed admitting. On adapted an as affixed limited on. Giving cousin warmly things no spring mr be abroad. Relation breeding be as repeated strictly followed margaret. One gravity son brought shyness waiting regular led ham.</p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-4">
             <div class="icon"><i class="fa fa-code"></i></div>
             <h3 class="heading mb-3 text-400">C#</h3>
-            <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
+          </div>
+          <div data-animate="fadeInUp" class="col-lg-4">
+            <div class="icon"><i class="fa fa-code"></i></div>
+            <h3 class="heading mb-3 text-400">.Net Core</h3>
           </div>
         </div>
         <hr data-animate="fadeInUp">
@@ -123,9 +134,9 @@
           <ul id="filter" data-animate="fadeInUp">
             <li class="active"><a href="#" data-filter="all">All</a></li>
             <li><a href="#" data-filter="webdesign">Webdesign</a></li>
-            <li><a href="#" data-filter="seo">SEO</a></li>
-            <li><a href="#" data-filter="marketing">Marketing</a></li>
-            <li><a href="#" data-filter="other">Other</a></li>
+            <li><a href="#" data-filter="seo">Applications</a></li>
+            <!-- <li><a href="#" data-filter="marketing">Marketing</a></li>
+            <li><a href="#" data-filter="other">Other</a></li> -->
           </ul>
           <div id="detail">
             <div class="row">
