--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
           <ul id="filter" data-animate="fadeInUp">
             <li class="active"><a href="#" data-filter="all">All</a></li>
             <li><a href="#" data-filter="webdesign">Webdesign</a></li>
-            <li><a href="#" data-filter="seo">Applications</a></li>
+            <li><a href="#" data-filter="application">Applications</a></li>
             <!-- <li><a href="#" data-filter="marketing">Marketing</a></li>
             <li><a href="#" data-filter="other">Other</a></li> -->
           </ul>
@@ -152,63 +152,63 @@
           <!-- Reference detail-->
           <div id="references-masonry" data-animate="fadeInUp">
             <div class="row">
-                  <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
+                  <div data-category="application" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-1.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">49 Ride Challenge</h3>
+                            <p>Looking to take on the ultimate Disney ride challenge? This app will help you with that.</p>
                           </div>
                         </div></a>
                       <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
                         <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
                         <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="seo" class="reference-item col-lg-3 col-md-6">
+                  <div data-category="application" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-2.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name 2</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">Minesweeper</h3>
+                            <p>A classic game with a little makeover.</p>
                           </div>
                         </div></a>
                       <div data-images="img/main-slider3.jpg,img/main-slider1.jpg" class="sr-only reference-description">
                         <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
                         <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="marketing" class="reference-item col-lg-3 col-md-6">
+                  <div data-category="application" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-3.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name 3</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">Weather App</h3>
+                            <p>Need to know the local weather? This app can help.</p>
                           </div>
                         </div></a>
                       <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
                         <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
                         <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="marketing" class="reference-item col-lg-3 col-md-6">
+                  <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-4.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name 4</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">Employee Database</h3>
+                            <p>A sample site of managing a companies employees.</p>
                           </div>
                         </div></a>
                       <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
                         <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
                         <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
                       </div>
                     </div>
                   </div>
@@ -216,33 +216,33 @@
                     <div class="reference"><a href="#"><img src="img/portfolio-5.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name 5</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">Color Picker</h3>
+                            <p>Just some random color selecting fun.</p>
                           </div>
                         </div></a>
                       <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
                         <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
                         <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="other" class="reference-item col-lg-3 col-md-6">
+                  <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-6.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name 6</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">Music Madness</h3>
+                            <p>A tribute to some of my favorite bands.</p>
                           </div>
                         </div></a>
                       <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
                         <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
                         <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="seo" class="reference-item col-lg-3 col-md-6">
+                  <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-7.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
@@ -253,11 +253,11 @@
                       <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
                         <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
                         <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
+                  <div data-category="application" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-8.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
@@ -268,7 +268,7 @@
                       <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
                         <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
                         <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
                       </div>
                     </div>
                   </div>
@@ -278,7 +278,7 @@
       </div>
     </section>
     <!-- Customers-->
-    <section id="customers" class="customers-section bg-gray">
+    <!-- <section id="customers" class="customers-section bg-gray">
       <div class="container">
         <div class="col-md-12">
           <div class="row align-items-center">
@@ -303,7 +303,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Contact-->
     <section id="contact" data-animate="bounceIn" class="contact-section contact">
       <div class="container">
