--- a/public/index.html
+++ b/public/index.html
@@ -69,11 +69,11 @@
         </header>
         <div class="row">
           <div data-animate="fadeInUp" class="col-lg-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloribus assumenda consectetur commodi natus eaque alias in excepturi iusto eos autem laborum, delectus enim perspiciatis veniam at fugit nesciunt? Atque!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloribus assumenda consectetur commodi natus eaque alias in excepturi iusto eos autem laborum, delectus enim perspiciatis veniam at fugit nesciunt? Atque!</p>            
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloribus assumenda consectetur commodi natus eaque alias in excepturi iusto eos autem laborum, delectus enim perspiciatis veniam at fugit nesciunt? Atque!</p>
+            <p>Originally from Southern California I have set up shop in sunny Tampa, FL. I have always had a passion for working with new and exciting technologies. I spent nearly a decade working in video production and during that time I discovered a passion for web development. </p>
+            <p>The thing I love about development is there's always something new to learn and it also allows me to exercise my creative problem solving on a daily basis. I love working on projects that help solve everyday problems or just help entertain us.</p>            
+            <p>When I'm not coding up new things you can find me backpacking or camping some new location, hunting down a nice craft beer or cocktail or cheering on the Tampa Bay Lightning.</p>
           </div>
-          <div data-animate="fadeInUp" class="col-sm-6 mx-auto mt-5"><img src="img/port-headshot.png" alt="This is me - IT worker" class="image rounded-circle img-fluid"></div>
+          <div data-animate="fadeInUp" class="col-sm-6 mx-auto"><img src="img/port-headshot.png" alt="This is me - Developer" class="image rounded-circle img-fluid"></div>
         </div>
       </div>
     </section>
@@ -124,7 +124,7 @@
     *** REFERENCES IMAGE ***
     _________________________________________________________
     -->
-    <section id="references">
+    <section class="my-work-section" id="references">
       <div class="container">
         <div class="col-sm-12">
           <div class="mb-5 text-center">
