Social Links Added

--- a/public/index.html
+++ b/public/index.html
@@ -120,10 +120,6 @@
       </div>
     </section>
 
-    <!--
-    *** REFERENCES IMAGE ***
-    _________________________________________________________
-    -->
     <section class="my-work-section" id="references">
       <div class="container">
         <div class="col-sm-12">
@@ -157,7 +153,7 @@
                         <div class="overlay">
                           <div class="inner">
                             <h3 class="h4 reference-title">49 Ride Challenge</h3>
-                            <p>Looking to take on the ultimate Disney ride challenge? This app will help you with that.</p>
+                            <p>Looking to take on the ultimate Disney ride challenge?</p>
                           </div>
                         </div></a>
                       <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
@@ -171,7 +167,7 @@
                     <div class="reference"><a href="#"><img src="img/portfolio-2.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Minesweeper</h3>
+                            <h3 class="h4 reference-title">Mine Finder</h3>
                             <p>A classic game with a little makeover.</p>
                           </div>
                         </div></a>
@@ -317,22 +313,22 @@
               <div class="controls">
                 <div class="row">
                   <div class="col-md-6">
-                    <input type="text" name="name" placeholder="Your firstname *" required="required" class="form-control">
+                    <input type="text" name="name" placeholder="First name *" required="required" class="form-control">
                   </div>
                   <div class="col-md-6">
-                    <input type="text" name="surname" placeholder="Your lastname *" required="required" class="form-control">
+                    <input type="text" name="surname" placeholder="Last name *" required="required" class="form-control">
                   </div>
                   <div class="col-md-6">
-                    <input type="text" name="email" placeholder="Your email *" required="required" class="form-control">
+                    <input type="text" name="email" placeholder="Email *" required="required" class="form-control">
                   </div>
                   <div class="col-md-6">
-                    <input type="text" name="phone" placeholder="Your phone" class="form-control">
+                    <input type="text" name="phone" placeholder="Phone number *" class="form-control">
                   </div>
                   <div class="col-md-12">
                     <textarea name="message" placeholder="Message for me *" rows="4" required="required" class="form-control"></textarea>
                   </div>
                   <div class="col-md-12 text-center">
-                    <button type="submit" class="btn btn-outline-primary">Send message</button>
+                    <button type="submit" class="send-message-btn btn btn-outline-primary">Send message</button>
                   </div>
                 </div>
               </div>
@@ -341,16 +337,16 @@
         </div>
       </div>
     </section>
-    <!-- Map-->
+    <!-- Footer-->
     <footer class="main-footer">
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center text-lg-left">
             <p class="social">
-              <a href="#" class="external github wow fadeInUp"><i class="fa fa-github"></i></a>
-              <a href="#" data-wow-delay="0.2s" class="external linkedin wow fadeInUp"><i class="fa fa-linkedin"></i></a>
-              <a href="#" data-wow-delay="0.4s" class="external youtube wow fadeInUp"><i class="fa fa-youtube"></i></a>
-              <a href="#" data-wow-delay="0.6s" class="email wow fadeInUp"><i class="fa fa-envelope"></i></a>
+              <a href="https://github.com/hayesch19" class="external github wow fadeInUp"><i class="fa fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/chrishayespro19/" data-wow-delay="0.2s" class="external linkedin wow fadeInUp"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.youtube.com/channel/UCXrnrgR2Y3jRvYimuWFW4Zw?view_as=subscriber" data-wow-delay="0.4s" class="external youtube wow fadeInUp"><i class="fa fa-youtube"></i></a>
+              <a href="mailto:chrishayespro@gmail.com" data-wow-delay="0.6s" class="email wow fadeInUp"><i class="fa fa-envelope"></i></a>
             </p>
           </div>
           <!-- /.6-->
